--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-remark-images": "^3.11.0",
+    "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.16.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "lazysizes": "^5.3.0",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
