--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.5.0",
-    "gatsby-plugin-algolia-search": "^0.5.0",
+    "gatsby-plugin-algolia-search": "0.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
